trunk/tests/kiama/negative/name_errors/L1/10_condname3.ob
MODULE condname;

VAR
    avar : INTEGER;
    bvar : BOOLEAN;

BEGIN
    IF bvar THEN
        avar := 0;
    ELSIF bvar2 THEN
    END
END condname.
